--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:              Clean Blog
+title:              Tech Graphics Plus
 email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
+description:        Responsive and Secure Websites
+author:             Tech Graphics Plus
 baseurl:            "/" # "/startbootstrap-clean-blog-jekyll"
 url:                "http://www.techgraphics.plus"
 
