--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 title:              Tech Graphics Plus
-email:              your-email@example.com
+email:              gareth.taylor@live.com.au
 description:        Responsive and Secure Websites
 author:             Tech Graphics Plus
 baseurl:            "/" # "/startbootstrap-clean-blog-jekyll"
 url:                "http://www.techgraphics.plus"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+twitter_username:   
+github_username:    techgraphicsplus
+facebook_username:  
 instagram_username:  
-linkedin_username:
+linkedin_username: 
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
